[project]
name = "ipathelper"
version = "1.0.3"
description = "PythonでIPATに投票する際に利用可能なモジュール"
readme = "README.rst"
authors = [
    {name = "Mikimini9627"}
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
Homepage = "https://github.com/Mikimini9627/ipathelper"
Repository = "https://github.com/Mikimini9627/ipathelper"